--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -15,7 +15,7 @@ body {
 
   min-height: 100dvh;
 
-  padding: 2rem 3rem;
+  padding: 1rem;
 
   background-color: var(--clr-bg);
   
